added new file, added some text in it

--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>hello world</h1>
+    <h1>Tervetuloa tutustumaan nettisivuuni!</h1>
+    <p>Tämä nettisivu on tehty harjoitus mielessä.</p> 
+    <p>Tätä nettisivua tehdessä kertaan aijempaa osaamistani ja opiskelen uutta.</p>
 </body>
+
+
+
 </html>
