--- a/second.html
+++ b/second.html
@@ -13,7 +13,7 @@
         <p>Tässä harjoittelen lisää nettisivujen tekoa.</p> 
         <p>Tässä osassa harjoittelen myös visuaalisen puolen perusteita.</p>   
     </header>
-    
+    <p>Tänne tulee kissa kuva.</p>
 </body>
 
 
