added links to index and second

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <h1>Tervetuloa tutustumaan nettisivuuni!</h1>
     <p>Tämä nettisivu on tehty harjoitus mielessä.</p> 
+    <p>Tämä on tehtävä 00B</p>
     <p>Tätä nettisivua tehdessä kertaan aijempaa osaamistani ja opiskelen uutta.</p>
+    <a href="https://evvieevee.github.io/second.html">Tästä pääset toiselle sivulle</a>
 </body>
 
 
