--- a/second.html
+++ b/second.html
@@ -8,12 +8,14 @@
     <title>second</title>
 </head>
 <body>
-    <header>
-        <h1>Tämä on kolmas osa nettisivuani!</h1>
-        <p>Tässä harjoittelen lisää nettisivujen tekoa.</p> 
-        <p>Tässä osassa harjoittelen myös visuaalisen puolen perusteita.</p>   
-    </header>
-    <p>Tänne tulee kissa kuva.</p>
+<header>
+    <h1>Tämä on tehtävä 04B.</h1>
+    <p>Tässä harjoittelen lisää nettisivujen tekoa.</p> 
+    <p>Tässä osassa harjoittelen myös visuaalisen puolen perusteita.</p>   
+</header>
+    <br>
+    <p>Tältä sivulta pääset takaisin etusivulle.</p>
+<a href="https://evvieevee.github.io/index.html">Etusivu</a>
 </body>
 
 
