--- a/styles.html
+++ b/styles.html
@@ -8,7 +8,7 @@
   <title>Styles</title>
 </head>
 <body>
-  <h1>Tervetuloa katsomaan nettisivuani!</h1>
+  <h1>Tämä on tehtävä 03 B. </h1>
   <p>Tämä on minulle css ja html kertausta. Olen aikaisemmin tehnyt yhtiä nettisivuja 
         ja nyt on hyvä kerrata sekä oppia uutta. </p>
 
