added images to second page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>Tämä nettisivu on tehty harjoitus mielessä.</p> 
     <p>Tämä on tehtävä 00B</p>
     <p>Tätä nettisivua tehdessä kertaan aijempaa osaamistani ja opiskelen uutta.</p>
-    <a href="https://evvieevee.github.io/second.html">Tästä pääset toiselle sivulle</a>
+<a href="https://evvieevee.github.io/second.html">Toiselle sivulle</a>
 </body>
 
 
