--- a/second.html
+++ b/second.html
@@ -16,8 +16,19 @@
     <br>
     <p>Tältä sivulta pääset takaisin etusivulle.</p>
 <a href="https://evvieevee.github.io/index.html">Etusivu</a>
+    <br>
+<img src="Kissa.jpg" alt="Minun kissa" width="350px;" height="250px;"> 
+<figure> 
+    <img src="kissa2.jpg" alt="Toinen kissani" style="width:350px; height: 200px;"> 
+</figure>
+
 </body>
 
 
 
 </html>
+
+
+
+
+
