--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Tervetuloa tutustumaan nettisivuuni!</h1>
+    <div>
+        <a href="https://evvieevee.github.io/second.html">Toiselle sivulle</a>
+        <h1>Tervetuloa tutustumaan nettisivuuni!</h1>
+    </div>
     <p>Tämä nettisivu on tehty harjoitus mielessä.</p> 
     <p>Tämä on tehtävä 00B</p>
     <p>Tätä nettisivua tehdessä kertaan aijempaa osaamistani ja opiskelen uutta.</p>
-<a href="https://evvieevee.github.io/second.html">Toiselle sivulle</a>
+
 </body>
 
 
