added colours links and text

--- a/layout.html
+++ b/layout.html
@@ -4,28 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="index.html" href="second.css">
+    <link rel="index.html">
     <title></title>
 </head>
 <body>
 <header>
 
-    <div class="header"> 
-        <h1>Tämä on tehtävä 5B.</h1> 
-    </div>
+<div id="header"> 
+    <h1>Tämä on tehtävä 5B.</h1> 
+</div>
 
-    <div class="nav"> 
-       <a href="https://evvieevee.github.io/index.html"></a> 
-       <a href="https://evvieevee.github.io/second.html"></a>
-    </div>
+<div id="nav"> 
+    <a href="https://evvieevee.github.io/index.html">Etusivulle</a> 
+    <a href="https://evvieevee.github.io/second.html">Tehtävään 4B</a>
+</div>
 
-    <div class="section">
-       <h2>Tämä on web page layout harjoitus.</h2>
-       <p>Huomasinkin, että tässä oli minulle paljon tuttua ennestään.</p>
-       <p>Tästä tehtävästä tuli kuitenkin hyvää kertausta.</p>
-       <img src="kissa3.jpg"alt="musta kissa" widht=150px height=180px>
-
-    </div>
+<div id="section">
+    <h2>Tämä on web page layout harjoitus.</h2>
+    <p>Huomasinkin, että tässä oli minulle paljon tuttua ennestään.</p>
+    <p>Tästä tehtävästä tuli kuitenkin hyvää kertausta.</p>
+    <img src="kissa3.jpg"alt="musta kissa" widht=150px height=180px>
+</div>
 
 </body>     
 </header>
@@ -34,16 +33,22 @@
 
 
 <style>
-
-.header{
-    background-color: blueviolet;
+#header{
+background-color:cornflowerblue;  
 }
 
-.nav{
+#nav{
+background-color:plum;
 
 }
 
-.section{
+#section{
+background-color: lightblue;
+}
 
+body{
+    width: 90%;
+    margin-left:auto;
+    margin-right:auto;  
 }
 </style>
