--- a/layout.html
+++ b/layout.html
@@ -5,32 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="index.html">
-    <title></title>
+    <title>Layout page</title>
 </head>
 <body>
-<header>
 
-<div id="header"> 
+
+<div id= "header"> 
     <h1>Tämä on tehtävä 5B.</h1> 
 </div>
 
-<div id="nav"> 
+<div id= "nav"> 
     <a href="https://evvieevee.github.io/index.html">Etusivulle</a> 
     <a href="https://evvieevee.github.io/second.html">Tehtävään 4B</a>
 </div>
 
-<div id="section">
+<div id= "section">
     <h2>Tämä on web page layout harjoitus.</h2>
     <p>Huomasinkin, että tässä oli minulle paljon tuttua ennestään.</p>
     <p>Tästä tehtävästä tuli kuitenkin hyvää kertausta.</p>
-    <img src="kissa3.jpg"alt="musta kissa" widht=150px height=180px>
+    <br>
+    <img src="kissa3.jpg" alt="musta kissa" widht=150px height=180px>
 </div>
 
-</body>     
-</header>
 
+</body>  
 </html> 
-
 
 <style>
 #header{
