added nav to index second an´d third page

--- a/index.html
+++ b/index.html
@@ -6,18 +6,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <title>Document</title>
+    <header>
+        <div class="VertNav">
+            <a href="https://evvieevee.github.io/index.html">Etusivu</a>
+            <a href="https://evvieevee.github.io/second.html">Second</a>
+            <a href="https://evvieevee.github.io/third.html">Third</a>
+            <a href= "https://www.iltalehti.fi/saa/9paivaa" target="_blank">Päivän sää</a>
+            <a href= "https://www.google.fi/" target="_blank"> Google</a>
+            
+        </div>
+    </header>
 </head>
 <body>
-    <div>
-        <a href="https://evvieevee.github.io/second.html">Toiselle sivulle</a>
+    <section>
         <h1>Tervetuloa tutustumaan nettisivuuni!</h1>
     </div>
     <p>Tämä nettisivu on tehty harjoitus mielessä.</p> 
     <p>Tämä on tehtävä 00B</p>
     <p>Tätä nettisivua tehdessä kertaan aijempaa osaamistani ja opiskelen uutta.</p>
-
+</section>
 </body>
 
 
 
 </html>
+<style>
+    .VertNav{
+    float:left;
+    width: 150px;
+    height: 100vh;
+    background-color: tomato;
+
+}
+a {
+    display: block;
+    padding: 10px;
+    padding: 2px;
+    border-radius: 75px;
+    background-color: rgb(252, 116, 6);
+    color: rgb(0, 0, 0);
+ }
+ div :hover {
+     color:red;
+ }
+ html Body{
+    background-color:#eba3e7;
+    font-family: sans-serif;
+    height: 100%;
+    margin: 0;
+}
+</style>
