--- a/third.html
+++ b/third.html
@@ -12,6 +12,7 @@
     <div class="VertNav">
         <a href="https://evvieevee.github.io/index.html">Etusivu</a>
         <a href="https://evvieevee.github.io/second.html">Second</a>
+        <a href="https://evvieevee.github.io/third.html">Third</a>
         <a href= "https://www.iltalehti.fi/saa/9paivaa" target="_blank">Päivän sää</a>
         <a href= "https://www.google.fi/" target="_blank"> Google</a>
         
