--- a/second.html
+++ b/second.html
@@ -9,12 +9,21 @@
 </head>
 <body>
 <header>
-    <div>
-        <a href="https://evvieevee.github.io/index.html">Etusivu</a>  
-        <h1>Tämä on tehtävä 04B.</h1>
+    <div class="VertNav">
+        <a href="https://evvieevee.github.io/index.html">Etusivu</a>
+        <a href="https://evvieevee.github.io/second.html">Second</a>
+        <a href="https://evvieevee.github.io/third.html">Third</a>
+        <a href= "https://www.iltalehti.fi/saa/9paivaa" target="_blank">Päivän sää</a>
+        <a href= "https://www.google.fi/" target="_blank"> Google</a>
+        
     </div>
+
       
 </header>
+<section>
+    <div>  
+        <h1>Tämä on tehtävä 04B.</h1>
+    </div>
 <p>Tässä harjoittelen lisää nettisivujen tekoa.</p> 
 <p>Tässä osassa harjoittelen myös visuaalisen puolen perusteita.</p> 
 <br>
@@ -31,6 +40,7 @@
         <figcaption>Kissa2</figcaption>
     </figure>
 </div>
+</section>
 </body>
 
 </html>
