add contact me page

--- a/wframes/contact.html
+++ b/wframes/contact.html
@@ -18,36 +18,29 @@
                 <Button class="navButton" style="border-radius: 0px 10px 10px 0px;">Button 3</Button>
                 <img src="../icons/lasi.PNG" alt="" style="height: 32px; margin: 0px 10px 0px 10px;">
             </div>
-            
-            
         </div>
-        <div class="col-sm-12"><h1 style="margin-left: 20px;">Header</h1></div>
-        <div class="col-sm-4">
-        <img src="../images/mypicture.PNG" alt="" style="width: 150px;" class="leftAlign"> 
-        </div>
-        <div class="col-sm-8" style="margin:auto;">
+    </div>
+    <br><br>
+    <div class="row">
+        <div class="col-sm-12"><h1 style="margin-left: 100px;">Contact me</h1></div>
+        <div class="col-sm-3"></div>
+        <div class="col-sm-6" style="margin:auto; text-align: left;">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo beatae neque maiores harum possimus. Vero perspiciatis quod nesciunt mollitia, illum animi voluptate necessitatibus assumenda temporibus atque, laborum magni odio molestiae!</p>
         </div>
+        <div class="col-sm-3"></div>
     </div>
-    <hr>
+    <br><br>
     <div class="row">
-        <div class="col-sm-12"><h3>Sub Header</h3></div>
-        <div class="col-sm-2"></div>
-        <div class="col-sm-6">
-            <p style="margin: auto; width: 50%;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis officia accusantium eum nobis adipisci laborum molestias commodi a doloribus fugiat corrupti nam odio atque minus tempore, quas excepturi consectetur harum?</p>
-        </div>
-        <div class="col-sm-4">
-            <img src="../Kissa.jpg" alt="" style="width: 300px;">
-            <br>
-            <br>
-            <img src="../kissa2.jpg" alt="" style="width: 300px;">
-        </div>
-    </div>   
-
-    <div class="row">
-        <div class="col-sm-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, eaque ullam quis similique facere quae a modi nobis accusantium fugit itaque fugiat alias voluptatem quos animi neque ipsum incidunt sit.</div>
-        <div class="col-sm-8"></div>
+        <div class="col-sm-3"></div>
+        <div class="col-sm-2"><h3>Sub Header</h3></div>
+        <div class="col-sm-7"></div>
     </div>
+    <div class="row">
+        <div class="col-sm-3 leftAlign"><p style="margin: auto; width: 80%;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque qui doloribus ex, officia animi veritatis itaque eum laborum quod quibusdam maiores quis corrupti! Quidem, sit maiores voluptatibus cupiditate voluptatem molestiae!</p></div>
+        <div class="col-sm-6"><input type="text" placeholder="Write your message..."></div>
+        <div class="col-sm-3"></div>
+    </div>
+    <br>
     <hr>
 
     <div class="row">
